--- a/index.html
+++ b/index.html
@@ -43,25 +43,15 @@
       border-radius: 50%;
       border: 15px solid ;
       border-top: 16px solid rgb(0, 86, 149);
-      border-right: 16px solid white;
-      border-bottom: 16px solid rgb(0, 86, 149);
-      border-left: 16px solid white;
+      border-right: 16px solid lightgray;
+      border-bottom: 16px solid lightgray;
+      border-left: 16px solid lightgray;
       width: 120px;
       height: 120px;
-      -webkit-animation: spin 2s linear infinite;
-      animation: spin 2s linear infinite;
+      -webkit-animation: spin 1.25s linear infinite;
+      animation: spin 1.25s linear infinite;
     }
-    .text {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-      position: absolute;
-      top: 62%;
-      left: 50%;   
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);   
-    }
+    
     .capmation {
       color: rgb(0, 86, 149);
       
@@ -95,14 +85,9 @@
        <div class="loading">
         <div class="loader"></div>
       </div>
-      <div class="text">
-        <h1 class="capmation">
-          Employee Portal
-        </h1>
-      </div>
 
   <script>
-    var serviceWorkerVersion = '3589838542';
+    var serviceWorkerVersion = '414392314';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
